<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vwp_interface</name>
  <version>0.1.0</version>
  <description>VWP Vehicle Interface</description>
  <maintainer email="andreas.schneider@hs-heilbronn.de">Andreas Schneider</maintainer>
  <license>Apache License 2.0</license>

  <author email="andreas.schneider@hs-heilbronn.de">Andreas Schneider</author>

  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>can_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>message_filters</depend>
  <depend>pacmod3_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tier4_api_msgs</depend>
  <depend>tier4_api_utils</depend>
  <depend>tier4_debug_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>vehicle_info_util</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
